// Copyright 2021 Ecogy Energy.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package api.esi;

option go_package = "github.com/elijahjpassmore/api/esi";

import "api/esi/der_facility_exchange_info.proto";
import "api/esi/der_facility_exchange_request.proto";
import "api/esi/der_facility_registration_form.proto";
import "api/esi/der_facility_registration_form_request.proto";
import "api/esi/der_facility_registration_form_data.proto";
import "api/esi/der_facility_registration.proto";
import "api/esi/der_characteristics.proto";
import "api/esi/der_resource_characteristics_request.proto";
import "api/esi/der_price_map_request.proto";
import "api/esi/price_map_characteristics.proto";
import "api/esi/der_program_set.proto";
import "api/esi/price_map.proto";
import "api/esi/price_map_offer.proto";
import "api/esi/price_map_offer_feedback.proto";
import "api/esi/price_map_offer_status.proto";
import "api/esi/datum_request.proto";
import "api/esi/price_datum.proto";
import "api/esi/power_parameters.proto";
import "api/esi/price_map_offer_response.proto";
import "api/esi/price_map_offer_feedback_response.proto";
import 'api/esi/der_power_parameters_request.proto';
import "api/esi/der_price_parameters_request.proto";

// A message received by a Registry.
message RegistryMessage {

  oneof chunk {
    // DerFacilityExchangeInfo
    // Should return a list of known facilities.
    DerFacilityExchangeInfo SignupRegistry = 1;

    // DerFacilityExchangeRequest
    // Should return a list of known facilities that match the given request.
    DerFacilityExchangeRequest QueryDerFacilities = 2;
  }

}

// A message received by a Facility.
message FacilityMessage {

  oneof chunk {
    // Should add facilities to storage.
    DerFacilityExchangeInfo SendKnownDerFacility = 1;
    // Return the registration form for this facility.
    DerFacilityRegistrationFormRequest GetDerFacilityRegistrationForm = 2;
    // Store the registration form.
    DerFacilityRegistrationForm SendDerFacilityRegistrationForm = 3;
    // Receive a completed registration form.
    DerFacilityRegistrationFormData SubmitDerFacilityRegistrationForm = 4;
    DerFacilityRegistration CompleteDerFacilityRegistration = 5;
    DerResourceCharacteristicsRequest GetResourceCharacteristics = 6;
    DerCharacteristics SendResourceCharacteristics = 7;
    DerPriceMapRequest GetPriceMap = 8;
    PriceMap SendPriceMap = 9;
    DerCharacteristics ProvideDerCharacteristics = 10;
    PriceMapCharacteristics ProvidePriceMaps = 11;
    DerProgramSet ProvideSupportedDerPrograms = 12;
    PriceMapOffer ProposePriceMapOffer = 13;
    PriceMapOfferResponse SendPriceMapOfferResponse = 14;
    PriceMapOfferFeedback GetPriceMapOfferFeedback = 15;
    PriceMapOfferStatus ProvidePriceMapOfferStatus = 16;
    PriceMapOfferFeedbackResponse ProvidePriceMapOfferFeedback = 17;
    PriceDatum ProvidePrices = 18;
    DatumRequest ListPowerProfile = 19;
    DerPowerParametersRequest GetPowerParameters = 20;
    PowerParameters SetPowerParameters = 21;
    DerPriceParametersRequest GetPriceParameters = 22;
  }

}
